Add element 2's solution
blue text color and 36px font size added to "Number 2"

--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -2,3 +2,8 @@
     background-color: rgb(255,155,155);
     font-family: Verdana, "Dejavu Sans", sans-serif;
 }
+
+#element2 {
+    color: rgb(0,0,255);
+    font-size: 36px;
+}
