--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -11,3 +11,9 @@
 .font24 {
     font-size: 24px;
 }
+
+#element4 {
+    background-color: rgb(155,255,155);
+    font-size: 24px;
+    font-weight: bold;
+}
