--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -5,20 +5,24 @@ body {
 
 .card {
   width: 400px;
-  background: #fff;
+  background: #ffffff;
   margin: 16px auto;
+  padding: 8px;
 }
 
 .title {
   background: #e3f4ff;
+  margin: 8px auto;
 }
 
 .content {
   background: #e3f4ff;
+  margin: 8px auto;
 }
 
 .button-container {
   background: #e3f4ff;
+  margin: 8px auto;
 }
 
 button {
