--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -2,6 +2,8 @@
   font-family: monospace;
   background: papayawhip;
   display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo {
@@ -10,12 +12,22 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
-  margin: auto;
+  display: flex;
+}
+
+.left-links {
+  display: flex;
+}
+
+.right-links {
+  display: flex;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  padding: 8px;
+  display: flex;
 }
 
 a {
