--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,7 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  padding: 8px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -17,7 +18,8 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
-  padding: 8px;
+  margin: 0px;
+  padding: 0px;
   display: flex;
   gap: 10px;
 }
