--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -20,10 +20,12 @@ body {
 
 .left-side {
   display: flex;
+  align-items: center;
 }
 
 .right-side {
   display: flex;
+  align-items: center;
 }
 
 .profile-image {
@@ -58,4 +60,7 @@ a {
 ul {
   list-style-type: none;
   display: flex;
+  margin: 0px;
+  padding: 0 0 0 16px;
+  gap: 16px;
 }
