Add cards section styling
font weight, gaps, and padding to individual cards. final attempt.

--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -26,7 +26,8 @@ body {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-
+  padding: 48px;
+  gap: 16px;
 }
 
 .footer {
@@ -36,6 +37,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-weight: 500;
 }
 
 .sidebar {
@@ -67,4 +69,6 @@ a {
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
   width: 300px;
+  padding: 8px;
+  font-weight: 500;
 }
